--- a/www/modules/shipyard/style.css
+++ b/www/modules/shipyard/style.css
@@ -58,6 +58,7 @@ body
 .menu_item
 {
   text-align: center;
+  flex-shrink: 0;
 }
 .menu_icon
 {
